BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/Profilo_BPER__mdt.object-meta.xml
<CustomObject>
    <label>Profilo BPER</label>
    <pluralLabel>Profili BPER</pluralLabel>
</CustomObject>