BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Crea_Contatto__c.field-meta.xml
<CustomField>
    <fullName>Crea_Contatto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crea Contatto</label>
    <type>Checkbox</type>
</CustomField>