BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <label>Flags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>