BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Gruppi_Pubblici__c.field-meta.xml
<CustomField>
    <fullName>Gruppi_Pubblici__c</fullName>
    <label>Gruppi Pubblici</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>