BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Modifica_lingua_in_aggiornamento__c.field-meta.xml
<CustomField>
    <fullName>Modifica_lingua_in_aggiornamento__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Modifica lingua in aggiornamento</label>
    <type>Checkbox</type>
</CustomField>