BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet__c</fullName>
    <label>PermissionSet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>