BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Profilo_LDAP__c.field-meta.xml
<CustomField>
    <fullName>Profilo_LDAP__c</fullName>
    <label>Profilo LDAP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>