BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Profilo_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Profilo_Salesforce__c</fullName>
    <description>Nome del Profilo Salesforce da associare in base al codice profilo BPER</description>
    <label>Profilo Salesforce</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>