BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Profilo_Salesforce_ENG__c.field-meta.xml
<CustomField>
    <fullName>Profilo_Salesforce_ENG__c</fullName>
    <label>Profilo Salesforce ENG</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>