BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Ruolo_Applicativo__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_Applicativo__c</fullName>
    <label>Ruolo Applicativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>