BPER/DEVF/force-app/main/default/objects/Profilo_BPER__mdt/fields/Ruolo_Saleforce__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_Saleforce__c</fullName>
    <label>Ruolo Saleforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>